refactor(auth): delegate token validation to provider and fix logout logic
- Remove internal verifyToken() method, use JwtTokenProvider instead.
- Update login() to generate and return Refresh Token.
- Fix logout(): map correct entity field 'expiredAt' and improve expiry calculation.
- Add error logging for logout failures.